[package]
name = "cloud-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
bin-encrypt-decrypt = "2.2.6"
chrono = "0.4.39"
hex = "0.4.3"
hyperlane = "3.9.0"
rand = "0.9.0"
sha2 = "0.10.8"

[profile.dev]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"
backtrace = "off"

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"
backtrace = "off"