[package]
name = "cloud-storage"
version = "0.2.0"
edition = "2021"

[dependencies]
bin-encode-decode = "0.0.2"
chrono = "0.4.40"
hex = "0.4.3"
hyperlane = "4.23.1"
rand = "0.9.0"
sha2 = "0.10.8"

[profile.dev]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"
backtrace = "off"

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"
backtrace = "off"